--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "less": "^4.2.0",
     "vue": "^3.2.37",
-    "vue3-tabs-chrome": "^0.3.3"
+    "vue3-tabs-chrome": "^0.3.3",
+    "xterm": "^5.3.0",
+    "xterm-addon-fit": "^0.8.0"
   },
   "devDependencies": {
     "@babel/types": "^7.18.10",
