--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "draggabilly": "^3.0.0",
     "less": "^4.2.0",
     "vue": "^3.2.37",
     "vue3-tabs-chrome": "^0.3.3",
@@ -17,6 +18,8 @@
   },
   "devDependencies": {
     "@babel/types": "^7.18.10",
+    "@types/draggabilly": "^2.1.6",
+    "@types/node": "^20.14.2",
     "@vitejs/plugin-vue": "^3.0.3",
     "typescript": "^4.6.4",
     "vite": "^3.0.7",
