--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "draggabilly": "^3.0.0",
     "less": "^4.2.0",
+    "trzsz": "^1.1.5",
     "vue": "^3.2.37",
     "vue3-tabs-chrome": "^0.3.3",
     "xterm": "^5.3.0",
-    "xterm-addon-fit": "^0.8.0"
+    "xterm-addon-fit": "^0.8.0",
+    "xterm-theme": "^1.1.0"
   },
   "devDependencies": {
     "@babel/types": "^7.18.10",
