--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "ant-design-vue": "4.x",
+    "@devui-design/icons": "^1.4.0",
+    "@shene/table": "1.0.0-alpha.24",
+    "@vitejs/plugin-vue-jsx": "^4.0.0",
+    "devui-theme": "^0.0.7",
     "draggabilly": "^3.0.0",
     "less": "^4.2.0",
+    "nanoid": "^5.0.7",
     "trzsz": "^1.1.5",
     "vue": "^3.2.37",
+    "vue-devui": "^1.6.20",
     "vue3-tabs-chrome": "^0.3.3",
     "xterm": "^5.3.0",
     "xterm-addon-fit": "^0.8.0",
