修复大部分问题

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,9 @@
     "@vitejs/plugin-vue-jsx": "^4.0.0",
     "devui-theme": "^0.0.7",
     "draggabilly": "^3.0.0",
+    "install": "^0.13.0",
     "less": "^4.2.0",
     "nanoid": "^5.0.7",
-    "trzsz": "^1.1.5",
     "vue": "^3.2.37",
     "vue-devui": "^1.6.20",
     "vue3-tabs-chrome": "^0.3.3",
