--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "@devui-design/icons": "^1.4.0",
-    "@shene/table": "1.0.0-alpha.24",
     "@vitejs/plugin-vue-jsx": "^4.0.0",
+    "ant-design-vue": "4.x",
     "devui-theme": "^0.0.7",
     "draggabilly": "^3.0.0",
     "install": "^0.13.0",
@@ -19,7 +19,6 @@
     "nanoid": "^5.0.7",
     "vue": "^3.2.37",
     "vue-devui": "^1.6.20",
-    "vue3-tabs-chrome": "^0.3.3",
     "xterm": "^5.3.0",
     "xterm-addon-fit": "^0.8.0",
     "xterm-theme": "^1.1.0"
