--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,25 +12,25 @@
     "@ant-design/icons-vue": "^7.0.1",
     "@devui-design/icons": "^1.4.0",
     "@vitejs/plugin-vue-jsx": "^4.0.0",
-    "ant-design-vue": "4.x",
+    "ant-design-vue": "~4.2.3",
     "devui-theme": "^0.0.7",
     "draggabilly": "^3.0.0",
     "install": "^0.13.0",
     "less": "^4.2.0",
     "nanoid": "^5.0.7",
-    "vue": "^3.2.37",
-    "vue-devui": "^1.6.20",
+    "vue": "^3.4.31",
+    "vue-devui": "^1.6.21",
     "xterm": "^5.3.0",
     "xterm-addon-fit": "^0.8.0",
     "xterm-theme": "^1.1.0"
   },
   "devDependencies": {
-    "@babel/types": "^7.18.10",
+    "@babel/types": "^7.24.9",
     "@types/draggabilly": "^2.1.6",
-    "@types/node": "^20.14.2",
-    "@vitejs/plugin-vue": "^3.0.3",
-    "typescript": "^4.6.4",
-    "vite": "^3.0.7",
+    "@types/node": "^20.14.11",
+    "@vitejs/plugin-vue": "^3.2.0",
+    "typescript": "^4.9.5",
+    "vite": "^3.2.10",
     "vue-tsc": "^1.8.27"
   }
 }
