--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,12 +18,9 @@
     "install": "^0.13.0",
     "less": "^4.2.0",
     "nanoid": "^5.0.7",
-    "trzsz": "^1.1.5",
     "vue": "^3.4.32",
     "vue-devui": "^1.6.21",
-    "xterm": "^5.3.0",
-    "xterm-addon-fit": "^0.8.0",
-    "xterm-theme": "^1.1.0"
+    "xterm": "^5.3.0"
   },
   "devDependencies": {
     "@babel/types": "^7.24.9",
