--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@ant-design/icons-vue": "^7.0.1",
     "@devui-design/icons": "^1.4.0",
     "@vitejs/plugin-vue-jsx": "^4.0.1",
+    "@xterm/xterm": "^5.5.0",
     "ant-design-vue": "~4.2.3",
     "devui-theme": "^0.0.7",
     "draggabilly": "^3.0.0",
@@ -19,16 +20,15 @@
     "less": "^4.2.0",
     "nanoid": "^5.0.7",
     "vue": "^3.4.38",
-    "vue-devui": "^1.6.21",
-    "xterm": "^5.3.0"
+    "vue-devui": "^1.6.21"
   },
   "devDependencies": {
     "@babel/types": "^7.25.4",
     "@types/draggabilly": "^2.1.6",
     "@types/node": "^20.16.1",
-    "@vitejs/plugin-vue": "^3.2.0",
+    "@vitejs/plugin-vue": "^5.1.2",
     "typescript": "^4.9.5",
-    "vite": "^3.2.10",
+    "vite": "^5.4.2",
     "vue-tsc": "^1.8.27"
   }
 }
