--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "draggabilly": "^3.0.0",
     "install": "^0.13.0",
     "less": "^4.2.0",
+    "mkdirp": "^3.0.1",
     "nanoid": "^5.0.7",
     "vue": "^3.4.38",
     "vue-devui": "^1.6.21"
@@ -30,5 +31,8 @@
     "typescript": "^4.9.5",
     "vite": "^5.4.2",
     "vue-tsc": "^1.8.27"
+  },
+  "resolutions": {
+    "mkdirp": "^3.0.1"
   }
 }
