--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "@types/draggabilly": "^2.1.6",
     "@types/node": "^20.16.5",
     "@vitejs/plugin-vue": "^5.1.3",
+    "asciinema-player": "3.6.3",
     "typescript": "^4.9.5",
     "vite": "^5.4.5",
     "vue-tsc": "^1.8.27"
