--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@ant-design/icons-vue": "^7.0.1",
     "@devui-design/icons": "^1.4.0",
     "@vitejs/plugin-vue-jsx": "^4.0.1",
+    "@xterm/addon-webgl": "^0.18.0",
     "@xterm/xterm": "^5.5.0",
     "ant-design-vue": "~4.2.4",
     "devui-theme": "^0.0.7",
@@ -20,7 +21,7 @@
     "less": "^4.2.0",
     "mkdirp": "^3.0.1",
     "nanoid": "^5.0.7",
-    "vue": "^3.5.5",
+    "vue": "^3.5.6",
     "vue-devui": "^1.6.21"
   },
   "devDependencies": {
@@ -30,7 +31,7 @@
     "@vitejs/plugin-vue": "^5.1.3",
     "asciinema-player": "3.6.3",
     "typescript": "^4.9.5",
-    "vite": "^5.4.5",
+    "vite": "^5.4.6",
     "vue-tsc": "^1.8.27"
   },
   "resolutions": {
